<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>PersonCenterWindow</class>
 <widget class="QMainWindow" name="PersonCenterWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize">
   <size>
    <width>0</width>
    <height>0</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>16777215</width>
    <height>16777215</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QWidget" name="topUserWidget" native="true">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>800</width>
      <height>120</height>
     </rect>
    </property>
    <property name="sizePolicy">
     <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
    <property name="minimumSize">
     <size>
      <width>400</width>
      <height>0</height>
     </size>
    </property>
    <widget class="QLabel" name="Labavatar">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>20</y>
       <width>80</width>
       <height>80</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">border-radius: 40px; 
border: 2px solid #E0E0E0;
background-image: url(E:/QtProject/PersonCenter/avatar.png); 
background-repeat: no-repeat;
background-size: cover;</string>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
    <widget class="QLabel" name="labNickname">
     <property name="geometry">
      <rect>
       <x>110</x>
       <y>20</y>
       <width>400</width>
       <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>微软雅黑</family>
       <pointsize>14</pointsize>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>用户名</string>
     </property>
    </widget>
    <widget class="QLabel" name="userIdLabel">
     <property name="geometry">
      <rect>
       <x>110</x>
       <y>50</y>
       <width>400</width>
       <height>16</height>
      </rect>
     </property>
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>400</width>
       <height>0</height>
      </size>
     </property>
     <property name="font">
      <font>
       <pointsize>12</pointsize>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">color: #888888;</string>
     </property>
     <property name="text">
      <string>用户 ID：FS2024001</string>
     </property>
    </widget>
    <widget class="QPushButton" name="editBtn">
     <property name="geometry">
      <rect>
       <x>690</x>
       <y>50</y>
       <width>100</width>
       <height>30</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>12</pointsize>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
    background-color: #FFFFFF;
    border: 1px solid #1E90FF;
    color: #1E90FF;
    border-radius: 4px;
}
QPushButton:hover {
    background-color: #F0F8FF;
}</string>
     </property>
     <property name="text">
      <string>编辑资料</string>
     </property>
    </widget>
   </widget>
   <widget class="QWidget" name="gridWidget" native="true">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>120</y>
      <width>800</width>
      <height>261</height>
     </rect>
    </property>
    <property name="sizePolicy">
     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
    <property name="minimumSize">
     <size>
      <width>0</width>
      <height>0</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
      <width>16777215</width>
      <height>16777215</height>
     </size>
    </property>
    <widget class="QPushButton" name="myPointsBtn">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>100</y>
       <width>800</width>
       <height>50</height>
      </rect>
     </property>
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>0</width>
       <height>0</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>16777215</width>
       <height>16777215</height>
      </size>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
    border: none;
    text-align: center; /* 文字居中 */
    font-size: 15px;
    color: #333333;
}
QPushButton:hover {
    background-color: #F0F8FF;
    border-radius: 8px;
}
</string>
     </property>
     <property name="text">
      <string>我的积分</string>
     </property>
     <property name="icon">
      <iconset>
       <normaloff>C:/Users/杨文玲/Pictures/Screenshots/屏幕截图 2025-11-27 002708.png</normaloff>C:/Users/杨文玲/Pictures/Screenshots/屏幕截图 2025-11-27 002708.png</iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>35</width>
       <height>35</height>
      </size>
     </property>
    </widget>
    <widget class="QPushButton" name="myMsgBtn">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>150</y>
       <width>800</width>
       <height>50</height>
      </rect>
     </property>
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>0</width>
       <height>0</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>16777215</width>
       <height>16777215</height>
      </size>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
    border: none;
    text-align: center; 
    font-size: 15px;
    color: #333333;
}
QPushButton:hover {
    background-color: #F0F8FF;
    border-radius: 8px;
}</string>
     </property>
     <property name="text">
      <string>我的消息</string>
     </property>
     <property name="icon">
      <iconset>
       <normaloff>C:/Users/杨文玲/Pictures/Screenshots/微信图片_20251201200211_148_9.jpg</normaloff>C:/Users/杨文玲/Pictures/Screenshots/微信图片_20251201200211_148_9.jpg</iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>35</width>
       <height>35</height>
      </size>
     </property>
    </widget>
    <widget class="QPushButton" name="commonInfoBtn">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>50</y>
       <width>800</width>
       <height>50</height>
      </rect>
     </property>
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>0</width>
       <height>0</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>16777215</width>
       <height>16777215</height>
      </size>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
    border: none;
    text-align: center; 
    font-size: 15px;
    color: #333333;
}
QPushButton:hover {
    background-color: #F0F8FF;
    border-radius: 8px;
}</string>
     </property>
     <property name="text">
      <string>常用信息</string>
     </property>
     <property name="icon">
      <iconset>
       <normaloff>C:/Users/杨文玲/Pictures/Screenshots/屏幕截图 2025-11-27 002743.png</normaloff>C:/Users/杨文玲/Pictures/Screenshots/屏幕截图 2025-11-27 002743.png</iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>35</width>
       <height>35</height>
      </size>
     </property>
    </widget>
    <widget class="QPushButton" name="myOrderBtn">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>0</y>
       <width>800</width>
       <height>50</height>
      </rect>
     </property>
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>0</width>
       <height>0</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>16777215</width>
       <height>16777215</height>
      </size>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
    border: none;
    text-align: center; 
    font-size: 15px;
    color: #333333;
	padding 8px 0;
}
QPushButton:hover {
    background-color: #F0F8FF;
    border-radius: 8px;
}</string>
     </property>
     <property name="text">
      <string>我的订单</string>
     </property>
     <property name="icon">
      <iconset>
       <normaloff>C:/Users/杨文玲/Pictures/Screenshots/屏幕截图 2025-11-27 002625.png</normaloff>C:/Users/杨文玲/Pictures/Screenshots/屏幕截图 2025-11-27 002625.png</iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>35</width>
       <height>35</height>
      </size>
     </property>
    </widget>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>18</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
